# platform.core.security.libwebappenc

./: AUTHORS  CMakeLists.txt
include/: CMakeLists.txt  web_app_enc.h
packaging/: libwebappenc-test.manifest.in  libwebappenc.manifest  libwebappenc.spec
resources/: CMakeLists.txt  README_APP_DEK  WAE_APPDEK_KEK_PrivateKey.pem  WAE_APPDEK_KEK_PublicKey.pem  WAE_APP_DEK_KEK_PrivateKey.pem
srcs/: CMakeLists.txt  crypto_service.c  crypto_service.h  decrypt_migrated_wgt.c  decrypt_migrated_wgt.h  key_handler.c  key_handler.h  key_manager.c  key_manager.h  ss_key_generator.c  ss_key_generator.h  types.c  types.h  wae_initializer.c  wae_log.h  web_app_enc.c
systemd/: CMakeLists.txt  webappenc-initializer.service.in
tests/: CMakeLists.txt  colour_log_formatter.cpp  colour_log_formatter.h  internals.cpp  main.cpp  non-normals.cpp  normals.cpp  test-common.cpp  test-common.h  test-helper.cpp  test-helper.h  wae_tests.c
